--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -73,7 +73,14 @@ jobs:
           format: "YYYY_MM_DD HH_mm_ss_SSS"
           
       - name: Set COM_ID
-        run: echo COM_ID=$(echo ${{ github.event.head_commit.id }} | head -c 7) >> $GITHUB_ENV
+        run: |
+          ID=${{ github.event.head_commit.id }}
+          if [[ -z "$ID" ]]; then
+            ID="XXXXXXX"
+          else
+            ID=$(echo $ID | head -c 7)
+          fi
+          echo COM_ID=$ID >> $GITHUB_ENV
         
       - name: Set VERSION_NAME
         run: echo VERSION_NAME=$(echo v${{ steps.dt.outputs.year }}.${{ steps.dt.outputs.month }}.${{ steps.dt.outputs.day }}.${{ env.COM_ID }}) >> $GITHUB_ENV
@@ -104,7 +111,7 @@ jobs:
           keyPassword: ${{ secrets.KEY_PASSWORD }}
 
       - name: Copy and rename APK
-        run: cp ./${{ env.SIGNED_RELEASE_FILE }} ./GongYun-{{ env.VERSION_NAME }}.apk
+        run: cp ./${{ env.SIGNED_RELEASE_FILE }} ./GongYun-${{ env.VERSION_NAME }}.apk
 
       - name: Build release AAB
         id: buildRelease
@@ -123,7 +130,7 @@ jobs:
           keyPassword: ${{ secrets.KEY_PASSWORD }}
 
       - name: Copy and rename AAB
-        run: cp ./${{ env.SIGNED_RELEASE_FILE }} ./GongYun-{{ env.VERSION_NAME }}.aab
+        run: cp ./${{ env.SIGNED_RELEASE_FILE }} ./GongYun-${{ env.VERSION_NAME }}.aab
 
       - name: Release APK and AAB
         uses: softprops/action-gh-release@v1
