--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ buildscript {
     }
 }
 
+plugins {
+    id("com.google.devtools.ksp") version "1.8.10-1.0.9" apply false
+}
+
 tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
