--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,11 +74,8 @@ dependencies {
 
     def room_version = "2.5.0"
     implementation("androidx.room:room-runtime:$room_version")
-    annotationProcessor("androidx.room:room-compiler:$room_version")
     // To use Kotlin Symbol Processing (KSP)
     ksp("androidx.room:room-compiler:$room_version")
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:$room_version")
 
     // Material Icons Extended
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
@@ -98,7 +95,6 @@ dependencies {
     kapt("com.google.dagger:hilt-compiler:$hilt_version")
     implementation("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
 
-
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -113,9 +109,6 @@ dependencies {
     // define any required OkHttp artifacts without version
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
-
-    //Gson
-    implementation 'com.google.code.gson:gson:2.10.1'
 
     // Preferences DataStore
     implementation("androidx.datastore:datastore-preferences-core:1.0.0")
@@ -142,19 +135,20 @@ dependencies {
 
     // When using a MDC theme
     implementation 'com.google.android.material:compose-theme-adapter:1.2.1'
+    implementation 'com.google.android.material:material:1.11.0'
 
-    implementation('androidx.compose.material3:material3:1.2.0-alpha09')
-    implementation('androidx.compose.material3:material3-window-size-class:1.2.0-alpha09')
+    implementation('androidx.compose.material3:material3:1.2.0-beta01')
+    implementation('androidx.compose.material3:material3-window-size-class:1.2.0-beta01')
 
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.8.1'
 
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.5.4'
+    implementation "androidx.compose.material:material:$compose_version"
     // Animations
-    implementation 'androidx.compose.animation:animation:1.5.4'
+    implementation "androidx.compose.animation:animation:$compose_version"
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.5.4'
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
@@ -168,19 +162,11 @@ dependencies {
     implementation 'androidx.core:core-remoteviews:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'com.google.android.material:material:1.10.0'
-
-
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-compose:2.7.5'
+    def navigation_version = '2.7.6'
+    implementation("androidx.navigation:navigation-fragment-ktx:$navigation_version")
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-compose:$navigation_version"
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.browser:browser:1.7.0'
 
     // For building appwidgets with Glance
     implementation 'androidx.glance:glance-appwidget:1.0.0'
@@ -191,6 +177,8 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.4'
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+}
+
+kapt {
+    correctErrorTypes = true
 }
