--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -60,7 +60,7 @@ jobs:
         id: dt
         uses: Kaven-Universe/github-action-current-date-time@v1
         with:
-          format: "YYYY_MM_DD HH_mm_ss_SSS"
+          format: "YY_MM_DD HH_mm_ss_SSS"
           
       - name: Set COM_ID
         run: |
@@ -76,7 +76,7 @@ jobs:
         run: echo VERSION_NAME=$(echo v${{ steps.dt.outputs.year }}.${{ steps.dt.outputs.month }}.${{ steps.dt.outputs.day }}.${{ env.COM_ID }}) >> $GITHUB_ENV
         
       - name: Set VERSION_CODE
-        run: echo VERSION_CODE=$(echo ${{ steps.dt.outputs.year }}${{ github.run_number }}) >> $GITHUB_ENV
+        run: echo VERSION_CODE=$(echo ${{ steps.dt.outputs.year }}${{ steps.dt.outputs.month }}${{ steps.dt.outputs.day }}${{ steps.dt.outputs.hours }}${{ steps.dt.outputs.minutes }}) >> $GITHUB_ENV
         
       - name: Override version name and code in build.gradle
         uses: Devofure/advance-android-version-actions@v1.4
