--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -60,7 +60,7 @@ jobs:
         id: dt
         uses: Kaven-Universe/github-action-current-date-time@v1
         with:
-          format: "YYYY年MM月DD日 HH:mm:ss.SSS"
+          format: "YYMMDDHHmm"
           timezone-offset: -480
           
       - name: Set COM_ID
@@ -75,15 +75,9 @@ jobs:
         
       - name: Set VERSION_NAME
         run: echo VERSION_NAME=$(echo v${{ steps.dt.outputs.year }}.${{ steps.dt.outputs.month }}.${{ steps.dt.outputs.day }}.${{ env.COM_ID }}) >> $GITHUB_ENV
-
-      - name: Set simplified year
-        run: |
-          SIM_YEAR=${{ steps.dt.outputs.year }}
-          SIM_YEAR=$(echo $SIM_YEAR | tail -c 3)
-          echo YEAR=$SIM_YEAR >> $GITHUB_ENV
         
       - name: Set VERSION_CODE
-        run: echo VERSION_CODE=$(echo ${{ env.YEAR }}${{ steps.dt.outputs.month }}${{ steps.dt.outputs.day }}${{ steps.dt.outputs.hours }}${{ steps.dt.outputs.minutes }}) >> $GITHUB_ENV
+        run: echo VERSION_CODE=$(echo ${{ steps.dt.outputs.time }}) >> $GITHUB_ENV
         
       - name: Override version name and code in build.gradle
         uses: Devofure/advance-android-version-actions@v1.4
