1、修复标题项可点击的bug 2、新增新成绩小红点显示（成绩提醒已实现，但未测试） 3、修复退出登录时数据库信息未清空的问题 4、成绩排名信息页面增加“满绩参考”指标

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
         <receiver
             android:name=".receiver.LessonReminderReceiver"
             android:exported="false" />
+        <receiver android:name=".receiver.GradeReminderReceiver"
+            android:exported="false" />
         <receiver
             android:name=".receiver.SyncScheduleReceiver"
             android:exported="false" />
